<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    android:background="#00272B"
    tools:context=".SelectionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Security Demo" />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/b_generateSignatureView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/generate_digital_signature"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/b_verifySignatureView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/verify_digital_signature"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_creation_of_nitish_devadiga"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        />
</LinearLayout>