<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    tools:context=".MainActivity"
    android:background="#00272B">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarLayout">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:title="Security Demo"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/digital_signature_generator"
                android:textSize="22sp"
                android:textColor="#FFF" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:text="@string/private_key"
                        android:textColor="#FFF"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/privateKeyLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="0dp"
                        android:layout_span="2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/privateKey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:maxHeight="100dp"
                            android:text=""
                            android:textIsSelectable="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:text="@string/public_key"
                        android:textColor="#FFF"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/publicKeyLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="0dp"
                        android:layout_span="2">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/publicKey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:maxHeight="100dp"
                            android:text=""
                            android:textIsSelectable="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/b_generateKeys"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:text="@string/generate_keys" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:hint="@string/message">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/messageET"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:gravity="start"
                            android:inputType="text"
                            android:text="" />
                    </com.google.android.material.textfield.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signatureLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:hint="Signature">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signatureET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:inputType="none"
                            android:maxHeight="100dp"
                            android:text=""
                            android:textIsSelectable="false" />
                    </com.google.android.material.textfield.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/b_sign"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_span="3"
                        android:text="@string/sign" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/b_sharePublicKey"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_span="1"
                        android:text="@string/share_public_key" />

                    <Button
                        android:id="@+id/b_shareMessage_Signature"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_span="1"
                        android:text="@string/share_message_and_signature" />

                    <Button
                        android:id="@+id/b_clear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_span="1"
                        android:text="@string/clear" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/a_creation_of_nitish_devadiga" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>